# SOFT

./: Makefile.am  configure.ac
topology/: sof-apl-nocodec.m4  sof-apl-tdf8532.m4  sof-bdw-rt286.m4  sof-bdw-rt5640.m4  sof-byt-da7213.m4  sof-byt-nocodec.m4  sof-byt-rt5640.m4  sof-byt-rt5645.m4  sof-byt-rt5651.m4  sof-cht-max98090.m4  sof-cht-nocodec.m4  sof-cnl-rt274.m4  sof-hsw-rt5640.m4
topology/m4/: bytecontrol.m4  dai.m4
topology/sof/: pipe-eq-volume-playback.m4  pipe-volume-playback.m4
topology/test/: test-all.m4  test-capture-ssp.m4  test-capture.m4  test-playback-ssp.m4  test-playback.m4  test-ssp.m4  test-tone-playback-ssp.m4  test-tone-playback.m4  tplg-build.sh
tune/: Makefile.am  README
tune/c/include/: common_test.h
tune/c/src/: common_test.c  fileread.c  filewrite.c
tune/eq/: Makefile.am  bassboost_fir.m  bassboost_iir.m  coef_quant.m  eq_blob_write.m  eq_compute.m  eq_compute_response.m  eq_defaults.m  eq_define_parametric_eq.m  eq_fir_blob_merge.m  eq_fir_blob_pack.m  eq_fir_blob_resp.m  eq_fir_decode_blob.m  eq_fir_decode_blob_header.m  eq_fir_quantize.m  eq_fir_test.c  eq_fir_test.m  eq_fir_test_blob.m  eq_iir_blob_merge.m  eq_iir_blob_pack.m  eq_iir_blob_resp.m  eq_iir_decode_blob.m  eq_iir_test.c  eq_iir_test.m  eq_iir_test_blob.m  eq_norm.m  eq_plot_iirfir.m  loudness1_fir.m  loudness1_iir.m  loudness2_fir.m  loudness2_iir.m
tune/m/: aap_test_input.m  aap_test_measure.m  aip_test_input.m  aip_test_measure.m  aweight.m  bark_to_bw.m  bark_to_f.m  delete_check.m  dither_and_quantize.m  dr_test_input.m  f_to_bark.m  find_test_signal.m  fr_test_input.m  fr_test_measure.m  g_test_input.m  load_test_output.m  mix_sweep.m  multi_ch_tones.m  stdnotch_get.m  stdweight.m  test_run.m  thdnf_test_input.m  thdnf_test_measure.m  write_ascii_data.m  write_wav.m
tune/scripts/: run_testbench.sh
tune/src/: Makefile.am  README  src_2stage.m  src_export_coef.m  src_export_defines.m  src_export_table_2s.m  src_get.m  src_param.m  src_test.c  src_test.m  tone_test.c  tone_test.m  tonesrc_test.c  tonesrc_test.m
tune/test/: Makefile.am  alloc.c  common_test.c  file.c  testbench.c  topology.c  trace.c
tune/volume/: Makefile.am  volume_test.c  volume_test.m
